--- a/assets/css/warladder.css
+++ b/assets/css/warladder.css
@@ -1,3 +1,5 @@
+
+
 body {
 	padding-top: 70px;
 }
@@ -8,4 +10,42 @@ tr.highlight {
 
 .jumbotron {
 	margin-top: -20px;
+}
+
+.operation tbody th {
+	text-align: right;
+	white-space: nowrap;
+	padding-left: 4px;
+	padding-right: 10px;
+}
+.operation table td {
+	padding-left: 4px;
+	padding-right: 10px;
+}
+table .stretch {
+	width: 100%;
+}
+.operation table td input {
+	width: 100%;
+}
+.operation table td input[type=radio], .operation table td input[type=checkbox] {
+	width: 20px;
+}
+
+.operation textarea {
+	width: 100%;
+	height: 150px;
+}
+.operation .submit {
+	text-align: right;
+}
+.operation .submit input {
+	width: auto;
+}
+.operation td, .operation th {
+	padding-bottom: 15px;
+}
+
+.stretch-50 {
+	width: 50%;
 }
