--- a/assets/css/warladder.css
+++ b/assets/css/warladder.css
@@ -1,7 +1,19 @@
 
 
 body {
-	padding-top: 70px;
+/* 	padding-top: 70px; */
+}
+
+.navbar-fixed-top, .navbar-fixed-bottom {
+	position: inherit;
+}
+
+.jumbotron {
+	padding-bottom: 28px;
+	padding-top: 28px;
+}
+.jumbotron h1 {
+	margin-top: 10px;
 }
 
 tr.highlight {
