--- a/assets/css/warladder.css
+++ b/assets/css/warladder.css
@@ -102,6 +102,10 @@ table .stretch {
 	display: block;
 	width: 100%;
 }
+.chatDate {
+	white-space: nowrap;
+	color: #777777;
+}
 
 .panel h3 {
 	margin-bottom: 5px;
